--- a/lib/sw_apps/lwip_echo_server/src/CMakeLists.txt
+++ b/lib/sw_apps/lwip_echo_server/src/CMakeLists.txt
@@ -6,18 +6,9 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/Lwip_echo_serverExample.cmake)
 set(APP_NAME lwip_echo_server)
 project(${APP_NAME})
 
-####    START OF USER SETTINGS    ####
-# Below settings can be customized
-set(USER_CC_FLAGS
-	""
-)
-set(USER_LINKER_FLAGS
-	""
-)
-####    END OF USER SETTINGS    ####
-
 find_package(common)
 include(${CMAKE_SOURCE_DIR}/lwip_echo_server.cmake NO_POLICY_SCOPE)
+include(${CMAKE_CURRENT_SOURCE_DIR}/UserConfig.cmake)
 enable_language(C ASM)
 collect(PROJECT_LIB_DEPS xilstandalone)
 collect(PROJECT_LIB_DEPS xil)
@@ -26,6 +17,7 @@ collect(PROJECT_LIB_DEPS lwip211)
 collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
+list (APPEND _deps ${USER_LINK_LIBRARIES})
 
 if(CMAKE_EXPORT_COMPILE_COMMANDS)
     set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
@@ -33,14 +25,15 @@ if(CMAKE_EXPORT_COMPILE_COMMANDS)
 endif()
 SET(SOURCES si5324.c;echo.c;sfp.c;main.c;i2c_access.c;platform.c;iic_phyreset.c;)
 linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/linker_files/")
-string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
-string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
+string(APPEND CMAKE_C_FLAGS ${USER_COMPILE_OPTIONS})
+string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINK_OPTIONS})
 add_executable(${APP_NAME}.elf ${SOURCES})
-target_link_libraries(${APP_NAME}.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_link_libraries(${APP_NAME}.elf -Wl,-T -Wl,\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group,-l${_deps} -Wl,--end-group)
+target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
 target_include_directories(${APP_NAME}.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
 if (${NON_YOCTO})
    set (INCLUDE_DIRS
        "${CMAKE_INCLUDE_PATH}/include/"
        "${CMAKE_BINARY_DIR}/include")
-  target_include_directories(${APP_NAME}.elf PUBLIC ${INCLUDE_DIRS})
+   target_include_directories(${APP_NAME}.elf PUBLIC ${INCLUDE_DIRS} ${USER_INCLUDE_DIRECTORIES})
 endif()
