--- a/lib/sw_apps/zynqmp_pmufw/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_pmufw/src/CMakeLists.txt
@@ -2,16 +2,8 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 3.14.7)
-####    START OF USER SETTINGS    ####
-# Below settings can be customized
-set(USER_CC_FLAGS
-	""
-)
-set(USER_LINKER_FLAGS
-	""
-)
-####    END OF USER SETTINGS    ####
 include_directories(${CMAKE_BINARY_DIR}/include)
+include(${CMAKE_CURRENT_SOURCE_DIR}/UserConfig.cmake)
 set(APP_NAME zynqmp_pmufw)
 project(${APP_NAME})
 
@@ -36,6 +28,7 @@ list (APPEND _lib "c")
 find_library(_lib_path ${_lib})
 
 collector_list (_deps PROJECT_LIB_DEPS)
+list (APPEND _deps ${USER_LINK_LIBRARIES})
 
 set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${D}${libdir})
 if(CMAKE_EXPORT_COMPILE_COMMANDS)
@@ -43,8 +36,9 @@ if(CMAKE_EXPORT_COMPILE_COMMANDS)
     set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
 endif()
 file(GLOB SOURCES "*.c")
-string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
-string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
+string(APPEND CMAKE_C_FLAGS ${USER_COMPILE_OPTIONS})
+string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINK_OPTIONS})
 add_executable(${APP_NAME}.elf xpfw_start.S ${SOURCES})
-target_link_libraries(${APP_NAME}.elf -Wl,--no-relax -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v9.2 -mxl-soft-mul -Os -flto -ffat-lto-objects -Wl,--gc-sections -nostartfiles -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
-
+target_link_libraries(${APP_NAME}.elf -Wl,--no-relax -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v9.2 -mxl-soft-mul -Os -flto -ffat-lto-objects -Wl,--gc-sections -nostartfiles -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
+target_include_directories(${APP_NAME}.elf PUBLIC ${USER_INCLUDE_DIRECTORIES})
