--- a/lib/sw_apps/empty_application/src/CMakeLists.txt
+++ b/lib/sw_apps/empty_application/src/CMakeLists.txt
@@ -2,16 +2,9 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 3.14.7)
-####    START OF USER SETTINGS    ####
-# Below settings can be customized
-set(USER_CC_FLAGS
-	""
-)
-set(USER_LINKER_FLAGS
-	""
-)
-####    END OF USER SETTINGS    ####
+
 include(${CMAKE_SOURCE_DIR}/Empty_applicationExample.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/UserConfig.cmake)
 set(APP_NAME empty_application)
 project(${APP_NAME})
 
@@ -39,6 +32,7 @@ if("${PROJECT_TYPE}" STREQUAL "c++")
 collect(PROJECT_LIB_DEPS stdc++)
 endif()
 collector_list (_deps PROJECT_LIB_DEPS)
+list (APPEND _deps ${USER_LINK_LIBRARIES})
 
 if("${PROJECT_TYPE}" STREQUAL "c++")
 string (REPLACE ";" ",-l" _deps "${_deps}")
@@ -48,9 +42,11 @@ if(CMAKE_EXPORT_COMPILE_COMMANDS)
     set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
 endif()
 linker_gen("${CMAKE_SOURCE_DIR}/linker_files/")
-string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
-string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
+string(APPEND CMAKE_C_FLAGS ${USER_COMPILE_OPTIONS})
+string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINK_OPTIONS})
 if(NOT "${SOURCES}" STREQUAL "")
 add_executable(${APP_NAME}.elf ${SOURCES})
-target_link_libraries(${APP_NAME}.elf -Wl,-T -Wl,\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -L\"${CMAKE_LIBRARY_PATH}/\" -Wl,--start-group,-l${_deps} -Wl,--end-group)
+target_link_libraries(${APP_NAME}.elf -Wl,-T -Wl,\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group,-l${_deps} -Wl,--end-group)
+target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
+target_include_directories(${APP_NAME}.elf PUBLIC ${USER_INCLUDE_DIRECTORIES})
 endif()
