--- a/lib/sw_apps/memory_tests/src/CMakeLists.txt
+++ b/lib/sw_apps/memory_tests/src/CMakeLists.txt
@@ -2,16 +2,8 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 3.14.7)
-####    START OF USER SETTINGS    ####
-# Below settings can be customized
-set(USER_CC_FLAGS
-	""
-)
-set(USER_LINKER_FLAGS
-	""
-)
-####    END OF USER SETTINGS    ####
 include(${CMAKE_CURRENT_SOURCE_DIR}/Memory_testsExample.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/UserConfig.cmake)
 set(APP_NAME memory_tests)
 project(${APP_NAME})
 
@@ -22,6 +14,7 @@ collect(PROJECT_LIB_DEPS xil)
 collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
+list (APPEND _deps ${USER_LINK_LIBRARIES})
 
 MACRO(memory_section index ddrip start_address size)
      set(MEMNODE${index}
@@ -64,7 +57,9 @@ endif()
 set(SOURCES memorytest.c;platform.c;memory_config_g.c)
 set(CMAKE_INFILE_PATH "${CMAKE_SOURCE_DIR}/linker_files/")
 linker_gen(${CMAKE_INFILE_PATH})
-string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
-string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
+string(APPEND CMAKE_C_FLAGS ${USER_COMPILE_OPTIONS})
+string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINK_OPTIONS})
 add_executable(${APP_NAME}.elf ${SOURCES})
-target_link_libraries(${APP_NAME}.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_link_libraries(${APP_NAME}.elf -Wl,-T -Wl,\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group,-l${_deps} -Wl,--end-group)
+target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
+target_include_directories(${APP_NAME}.elf PUBLIC ${USER_INCLUDE_DIRECTORIES})
