--- a/lib/sw_apps/zynqmp_pmufw/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_pmufw/src/CMakeLists.txt
@@ -42,3 +42,6 @@ add_executable(${APP_NAME}.elf xpfw_start.S ${SOURCES})
 target_link_libraries(${APP_NAME}.elf -Wl,--no-relax -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v9.2 -mxl-soft-mul -Os -flto -ffat-lto-objects -Wl,--gc-sections -nostartfiles -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
 target_include_directories(${APP_NAME}.elf PUBLIC ${USER_INCLUDE_DIRECTORIES})
+add_custom_command(
+	TARGET ${APP_NAME}.elf POST_BUILD
+	COMMAND ${CMAKE_SIZE} --format=berkeley ${APP_NAME}.elf)
