--- a/XilinxProcessorIPLib/drivers/sysmonpsv/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/sysmonpsv/src/CMakeLists.txt
@@ -19,6 +19,7 @@ if (DRIVER_OPTPROP_0_LIST)
         string(TOUPPER ${PROP} PROP_UPPER)
         list(APPEND defs "\t${PROP_UPPER},\n")
     endforeach()
+    list(APPEND defs "\tEndList,\n")
 else()
     list(APPEND defs "\tEndList,\n")
     list(APPEND defs "\tNO_SUPPLIES_CONFIGURED = XPAR_XSYSMONPSV_0_NO_MEAS,\n")
@@ -29,10 +30,15 @@ file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/xsysmonpsv_supplylist.h ${defs})
 
 file(READ ${CMAKE_CURRENT_SOURCE_DIR}/xsysmonpsv_g.c defs)
 string(FIND "${defs}" "XSysMonPsv_Supply_Arr" _index)
-if ((${_index} EQUAL -1) AND
-    ("${DRIVER_OPTPROP_0_LIST}" STREQUAL ""))
+if (${_index} EQUAL -1)
     list(APPEND defs ";\\")
     list(APPEND defs "\n\nconst char *XSysMonPsv_Supply_Arr[] = {\n")
+    if (DRIVER_OPTPROP_0_LIST)
+        foreach(PROP ${DRIVER_OPTPROP_0_LIST})
+            string(TOUPPER ${PROP} PROP_UPPER)
+            list(APPEND defs "\t\"${PROP_UPPER}\",\n")
+        endforeach()
+    endif()
     list(APPEND defs "};\\")
     list(APPEND defs "\n")
     file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/xsysmonpsv_g.c ${defs})
