--- a/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
@@ -63,6 +63,8 @@ target_link_libraries(${APP_NAME}.elf -Os -flto -ffat-lto-objects -Wl,--gc-secti
 endif()
 target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
 target_include_directories(${APP_NAME}.elf PUBLIC ${USER_INCLUDE_DIRECTORIES})
-add_custom_command(
+if(DEFINED CMAKE_SIZE)
+    add_custom_command(
 	TARGET ${APP_NAME}.elf POST_BUILD
 	COMMAND ${CMAKE_SIZE} --format=berkeley ${APP_NAME}.elf)
+endif()
