--- a/lib/sw_services/xilsecure/src/common/versal_common/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/src/common/versal_common/CMakeLists.txt
@@ -1,7 +1,5 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
-cmake_minimum_required(VERSION 2.8.9)
-
 add_subdirectory(common)
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblaze") OR 
    ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblazeel") OR
@@ -10,5 +8,11 @@ if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblaze") OR
    (${XILSECURE_Mode}))
    add_subdirectory(server)
 else()
-  add_subdirectory(client)
+   if (${NON_YOCTO})
+       get_property(src_files TARGET xilmailbox PROPERTY SOURCES)
+       if (NOT src_files)
+	   message(FATAL_ERROR "This library requires xilmailbox library in the Board Support Package.")
+       endif()
+   endif()
+   add_subdirectory(client)
 endif()
