sample_sdt: Pushing update sample system device trees
Sample system device trees are updated with the latest system-device repo changes.
These are generated with the commit ID 9bed0bc4ccf5f6a101992f4b8943bb0afbe4f5a1
of master-next branch of system-device-tree repo.

Signed-off-by: Onkar Harsh <onkar.harsh@amd.com>

--- a/sample_sdt/vck190/sdt/pcw.dtsi
+++ b/sample_sdt/vck190/sdt/pcw.dtsi
@@ -518,15 +518,144 @@
 		xlnx,name = "versal_cips_0_pspmc_0_psv_pmc_sd_1";
 	};
 	&sysmon0 {
-		xlnx,rable = <0>;
-		compatible = "xlnx,versal-sysmon" , "xlnx,ctrlregs";
-		status = "okay";
-		#address-cells = <2>;
-		xlnx,ip-name = "psv_pmc_sysmon";
-		xlnx,numchannels = "/bits/8 , <0>";
-		#size-cells = <2>;
+		xlnx,sat-63-desc = "PS , FPD , satellite";
+		xlnx,sat-34-y = <13560>;
+		xlnx,sat-17-x = <22594>;
+		xlnx,sat-1-desc = "PMC , system , ADC";
+		xlnx,sat-9-x = <18841>;
+		xlnx,sat-17-y = <7620>;
+		xlnx,sat-19-desc = "Clocking , column , satellite";
+		xlnx,sat-20-desc = "Clocking , column , satellite";
+		xlnx,sat-9-y = <9709>;
 		firewall-0 = <&pmc_xppu>;
+		xlnx,sat-38-x = <2793>;
+		xlnx,sat-38-y = <12272>;
+		xlnx,sat-32-desc = "VNOC , satellite";
+		xlnx,rable = <0>;
+		xlnx,sat-22-x = <14954>;
+		xlnx,ip-name = "psv_pmc_sysmon";
+		xlnx,sat-22-y = <6649>;
+		#size-cells = <2>;
+		xlnx,sat-16-desc = "Clocking , column , satellite";
+		xlnx,sat-9-desc = "VNOC , satellite";
+		xlnx,sat-26-x = <11067>;
+		#address-cells = <2>;
+		xlnx,sat-28-desc = "VNOC , satellite";
+		xlnx,sat-26-y = <3590>;
+		xlnx,sat-10-x = <18616>;
+		xlnx,sat-64-x = <12>;
+		xlnx,sat-2-x = <12>;
+		xlnx,sat-10-y = <13560>;
+		xlnx,sat-64-y = <2868>;
+		xlnx,sat-2-y = <2868>;
+		xlnx,sat-13-desc = "ME , satellite";
+		xlnx,sat-41-desc = "Clocking , column , satellite";
+		xlnx,sat-31-x = <7180>;
+		xlnx,sat-6-desc = "XPIO , satellite";
+		xlnx,sat-31-y = <3590>;
+		xlnx,sat-14-x = <22594>;
+		xlnx,sat-6-x = <22579>;
+		xlnx,sat-25-desc = "ME , satellite";
+		xlnx,sat-14-y = <12272>;
+		xlnx,sat-6-y = <1535>;
+		xlnx,sat-35-x = <4666>;
+		xlnx,sat-10-desc = "ME , satellite";
+		compatible = "xlnx,versal-sysmon" , "xlnx,ctrlregs";
+		xlnx,sat-37-desc = "ME , satellite";
+		xlnx,sat-35-y = <13560>;
+		xlnx,sat-18-x = <22594>;
+		xlnx,sat-3-desc = "XPIO , satellite";
+		xlnx,sat-18-y = <6037>;
+		xlnx,sat-22-desc = "VNOC , satellite";
+		xlnx,sat-40-x = <2793>;
+		xlnx,sat-39-x = <2793>;
+		xlnx,sat-40-y = <9097>;
+		xlnx,sat-39-y = <10679>;
+		xlnx,sat-23-x = <14954>;
+		xlnx,sat-34-desc = "ME , satellite";
+		xlnx,sat-23-y = <9709>;
+		xlnx,sat-18-desc = "Clocking , column , satellite";
+		xlnx,sat-27-x = <11067>;
+		xlnx,sat-27-y = <6649>;
+		xlnx,sat-11-x = <16623>;
+		xlnx,sat-3-x = <4435>;
+		xlnx,sat-31-desc = "VNOC , satellite";
+		xlnx,sat-11-y = <13560>;
+		xlnx,sat-3-y = <1535>;
+		status = "okay";
+		xlnx,sat-32-x = <7180>;
+		xlnx,sat-15-desc = "Clocking , column , satellite";
+		xlnx,sat-32-y = <6649>;
+		xlnx,sat-15-x = <22594>;
+		xlnx,sat-8-desc = "VNOC , satellite";
+		xlnx,sat-7-x = <18841>;
 		xlnx,name = "versal_cips_0_pspmc_0_psv_pmc_sysmon_0";
+		xlnx,sat-15-y = <10679>;
+		xlnx,sat-7-y = <3590>;
+		xlnx,sat-27-desc = "VNOC , satellite";
+		xlnx,sat-36-x = <2673>;
+		xlnx,sat-36-y = <13560>;
+		xlnx,sat-12-desc = "ME , satellite";
+		xlnx,sat-19-x = <22594>;
+		xlnx,sat-20-x = <22594>;
+		xlnx,sat-40-desc = "Clocking , column , satellite";
+		xlnx,sat-39-desc = "Clocking , column , satellite";
+		xlnx,sat-19-y = <4560>;
+		xlnx,sat-20-y = <2977>;
+		xlnx,sat-5-desc = "XPIO , satellite";
+		xlnx,sat-41-x = <2793>;
+		xlnx,sat-24-desc = "ME , satellite";
+		xlnx,sat-41-y = <7620>;
+		xlnx,sat-24-x = <14630>;
+		xlnx,sat-24-y = <13560>;
+		xlnx,sat-36-desc = "ME , satellite";
+		xlnx,sat-64-desc = "PS , LPD , satellite";
+		xlnx,sat-2-desc = "PMC , user , ADC";
+		xlnx,sat-28-x = <11067>;
+		xlnx,sat-21-desc = "VNOC , satellite";
+		xlnx,sat-28-y = <9709>;
+		xlnx,sat-12-x = <20609>;
+		xlnx,sat-4-x = <10483>;
+		xlnx,sat-12-y = <13560>;
+		xlnx,sat-4-y = <1535>;
+		xlnx,sat-33-desc = "VNOC , satellite";
+		xlnx,sat-33-x = <7180>;
+		xlnx,sat-33-y = <9709>;
+		xlnx,sat-16-x = <22594>;
+		xlnx,sat-17-desc = "Clocking , column , satellite";
+		xlnx,sat-8-x = <18841>;
+		xlnx,sat-16-y = <9097>;
+		xlnx,sat-8-y = <6649>;
+		xlnx,sat-37-x = <680>;
+		xlnx,sat-30-desc = "ME , satellite";
+		xlnx,sat-29-desc = "ME , satellite";
+		xlnx,sat-37-y = <13560>;
+		xlnx,sat-21-x = <14954>;
+		xlnx,sat-14-desc = "Clocking , column , satellite";
+		xlnx,sat-21-y = <3590>;
+		xlnx,sat-7-desc = "VNOC , satellite";
+		xlnx,sat-26-desc = "VNOC , satellite";
+		xlnx,sat-25-x = <12638>;
+		xlnx,sat-25-y = <13560>;
+		xlnx,sat-63-x = <12>;
+		xlnx,sat-11-desc = "ME , satellite";
+		xlnx,sat-1-x = <12>;
+		xlnx,numchannels = "/bits/8 , <0>";
+		xlnx,sat-63-y = <2868>;
+		xlnx,sat-38-desc = "Clocking , column , satellite";
+		xlnx,sat-1-y = <2868>;
+		xlnx,sat-4-desc = "XPIO , satellite";
+		xlnx,sat-30-x = <8652>;
+		xlnx,sat-29-x = <10645>;
+		xlnx,sat-30-y = <13560>;
+		xlnx,sat-29-y = <13560>;
+		xlnx,sat-13-x = <22602>;
+		xlnx,sat-23-desc = "VNOC , satellite";
+		xlnx,sat-5-x = <16531>;
+		xlnx,sat-13-y = <13560>;
+		xlnx,sat-5-y = <1535>;
+		xlnx,sat-35-desc = "ME , satellite";
+		xlnx,sat-34-x = <6659>;
 	};
 	&pmc_xmpu {
 		xlnx,rable = <0>;
@@ -555,6 +684,7 @@
 	&gic_a72 {
 		xlnx,rable = <0>;
 		status = "okay";
+		xlnx,apu-gic-its-ctl = <0xF9020000>;
 		xlnx,ip-name = "psv_acpu_gic";
 		firewall-0 = <&fpd_xmpu>;
 		xlnx,name = "versal_cips_0_pspmc_0_psv_acpu_gic";
@@ -1099,11 +1229,13 @@
 		};
 		versal_cips_0_pspmc_0_psv_cpm: psv_cpm@fc000000 {
 			xlnx,rable = <0>;
+			xlnx,cpm5-slcr-addr = <0xFCDD0000>;
 			compatible = "xlnx,psv-cpm-1.0";
 			status = "okay";
 			xlnx,ip-name = "psv_cpm";
 			reg = <0x0 0xfc000000 0x0 0x1000000>;
 			firewall-0 = <&lpd_xppu>;
+			xlnx,cpm5-dma0-csr-addr = <0xFCE20000>;
 			xlnx,name = "versal_cips_0_pspmc_0_psv_cpm";
 		};
 		versal_cips_0_pspmc_0_psv_crf_0: psv_crf@fd1a0000 {
