*.py: Fixing the timing issues with library addition and configuration
Signed-off-by: Onkar Harsh <onkar.harsh@amd.com>

--- a/lib/sw_services/xilsecure/src/common/versal_common/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/src/common/versal_common/CMakeLists.txt
@@ -9,9 +9,8 @@ if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblaze") OR
    add_subdirectory(server)
 else()
    if (${NON_YOCTO})
-       get_property(src_files TARGET xilmailbox PROPERTY SOURCES)
-       if (NOT src_files)
-	   message(FATAL_ERROR "This library requires xilmailbox library in the Board Support Package.")
+       if (NOT ("xilmailbox" IN_LIST BSP_LIBSRC_SUBDIRS))
+           message(FATAL_ERROR "This library requires xilmailbox library in the Board Support Package.")
        endif()
    endif()
    add_subdirectory(client)
