--- a/lib/sw_apps/lwip_udp_perf_client/src/CMakeLists.txt
+++ b/lib/sw_apps/lwip_udp_perf_client/src/CMakeLists.txt
@@ -24,11 +24,18 @@ if(CMAKE_EXPORT_COMPILE_COMMANDS)
     set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
     set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
 endif()
-SET(SOURCES si5324.c;sfp.c;main.c;i2c_access.c;platform.c;iic_phyreset.c;udp_perf_client.c)
+collect (PROJECT_LIB_SOURCES si5324.c)
+collect (PROJECT_LIB_SOURCES sfp.c)
+collect (PROJECT_LIB_SOURCES main.c)
+collect (PROJECT_LIB_SOURCES i2c_access.c)
+collect (PROJECT_LIB_SOURCES platform.c)
+collect (PROJECT_LIB_SOURCES iic_phyreset.c)
+collect (PROJECT_LIB_SOURCES udp_perf_client.c)
+collector_list (_sources PROJECT_LIB_SOURCES)
 linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/linker_files/")
 string(APPEND CMAKE_C_FLAGS ${USER_COMPILE_OPTIONS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINK_OPTIONS})
-add_executable(${APP_NAME}.elf ${SOURCES})
+add_executable(${APP_NAME}.elf ${_sources})
 target_link_libraries(${APP_NAME}.elf -Wl,-T -Wl,\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group,-l${_deps} -Wl,--end-group)
 target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
 if(DEFINED CMAKE_SIZE)
