--- a/lib/sw_apps/memory_tests/src/CMakeLists.txt
+++ b/lib/sw_apps/memory_tests/src/CMakeLists.txt
@@ -54,12 +54,15 @@ if(CMAKE_EXPORT_COMPILE_COMMANDS)
     set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
     set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
 endif()
-set(SOURCES memorytest.c;platform.c;memory_config_g.c)
+collect (PROJECT_LIB_SOURCES platform.c)
+collect (PROJECT_LIB_SOURCES memorytest.c)
+collect (PROJECT_LIB_SOURCES memory_config_g.c)
+collector_list (_sources PROJECT_LIB_SOURCES)
 set(CMAKE_INFILE_PATH "${CMAKE_SOURCE_DIR}/linker_files/")
 linker_gen(${CMAKE_INFILE_PATH})
 string(APPEND CMAKE_C_FLAGS ${USER_COMPILE_OPTIONS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINK_OPTIONS})
-add_executable(${APP_NAME}.elf ${SOURCES})
+add_executable(${APP_NAME}.elf ${_sources})
 target_link_libraries(${APP_NAME}.elf -Wl,-T -Wl,\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group,-l${_deps} -Wl,--end-group)
 target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
 target_include_directories(${APP_NAME}.elf PUBLIC ${USER_INCLUDE_DIRECTORIES})
