--- a/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
@@ -42,7 +42,7 @@ if(CMAKE_EXPORT_COMPILE_COMMANDS)
     set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
     set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
 endif()
-file(GLOB SOURCES "*.c")
+aux_source_directory(${CMAKE_SOURCE_DIR} _sources)
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa72")
 	OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53")
 	OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53-32")
@@ -53,7 +53,7 @@ else()
 endif()
 string(APPEND CMAKE_C_FLAGS ${USER_COMPILE_OPTIONS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINK_OPTIONS})
-add_executable(${APP_NAME}.elf ${S_SOURCES} ${SOURCES})
+add_executable(${APP_NAME}.elf ${S_SOURCES} ${_sources})
 
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53")
     OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64"))
