dmaps: Fix compilation errors with dmaps
--> Align driver yaml as per driver config struct.
--> Fixed the DevicId variable usage for SDT flow.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/dmaps/data/dmaps.yaml
+++ b/XilinxProcessorIPLib/drivers/dmaps/data/dmaps.yaml
@@ -20,15 +20,9 @@ properties:
     description: Physical base address and size of the controller register map
 
 config:
-   - XDpDma_Config 
+   - XDmaPs_Config
 
 required:
     - compatible
     - reg
-    - interrupts: 9
-    - interrupt-parent
-
-examples:
-   xdmaps_example_w_intr.c:
-    - interrupts
 ...
