lib: bsp: System device-tree flow zynq port bug fixes
1) Update the translation table to use the
DDR macros generated in the sdt flow.
2) Update the yaml to generate only the freq parameter
in the config structure it is currently being used by xiltimer
library.
3) Update the xiltimer.cmake file to generate the XSLEEPTIMER_FREQ
macro for the zynq port.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/bsp/standalone/data/cortexa9/cortexa9.yaml
+++ b/lib/bsp/standalone/data/cortexa9/cortexa9.yaml
@@ -18,11 +18,6 @@ properties:
           - arm,cortex-a9
 
 required:
-    - xlnx,i-cache-size
-    - xlnx,d-cache-size
-    - xlnx,cpu-1x-clk-freq-hz
-    - reg
-    - xlnx,i-cache-line-size
-    - xlnx,d-cache-line-size
+    - xlnx,cpu-clk-freq-hz
 ...
 
