--- a/lib/bsp/standalone/src/arm/cortexa9/CMakeLists.txt
+++ b/lib/bsp/standalone/src/arm/cortexa9/CMakeLists.txt
@@ -21,5 +21,7 @@ collect (PROJECT_LIB_HEADERS xparameters_ps.h)
 collect (PROJECT_LIB_HEADERS xpm_counter.h)
 collect (PROJECT_LIB_HEADERS xpseudo_asm.h)
 collect (PROJECT_LIB_HEADERS xreg_cortexa9.h)
+collect (PROJECT_LIB_HEADERS xcortexa9.h)
+collect (PROJECT_LIB_HEADERS xcortexa9_config.h)
 #collect (PROJECT_LIB_SOURCES xtime_l.c)
 #collect (PROJECT_LIB_HEADERS xtime_l.h)
