--- a/lib/bsp/standalone/src/common/CMakeLists.txt
+++ b/lib/bsp/standalone/src/common/CMakeLists.txt
@@ -53,3 +53,7 @@ endif()
 if("${CMAKE_MACHINE}" STREQUAL "Versal")
 add_subdirectory(versal)
 endif()
+
+if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa9")
+   collect (PROJECT_LIB_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../xcortexa9_g.c)
+endif()
