--- a/lib/bsp/standalone/data/microblaze/microblaze.yaml
+++ b/lib/bsp/standalone/data/microblaze/microblaze.yaml
@@ -15,6 +15,7 @@ properties:
     OneOf:
       - items:
         - enum:
+          - microblaze
           - pmu-microblaze
           - xlnx,microblaze-11.0
           - xlnx,microblaze
