--- a/lib/sw_apps/empty_application/data/empty_application.yaml
+++ b/lib/sw_apps/empty_application/data/empty_application.yaml
@@ -21,6 +21,8 @@ supported_processors:
   - psv_cortexa72
   - psv_cortexr5
   - ps7_cortexa9
+  - ps7_cortexa9
+  - microblaze
 
 supported_os:
   - standalone
