sw_apps: memory_tests: Support PL Microblaze
- Update app yaml file
- Update linker script to allocate stack and heap size same as that
  of existing Vitis flow (1 KB)
- Update microblaze toolchain.cmake file to have compiler flag in sync
   with vitis flow
- Update CMakeLists.txt to missing linker flags

Signed-off-by: Mubin Sayyed <mubin.sayyed@amd.com>

--- a/scripts/linker_files/lscript_mb.ld.in
+++ b/scripts/linker_files/lscript_mb.ld.in
@@ -3,8 +3,8 @@
 * SPDX-License-Identifier: MIT
 ******************************************************************************/
 
-_STACK_SIZE = DEFINED(_STACK_SIZE) ? _STACK_SIZE : 0xA000;
-_HEAP_SIZE = DEFINED(_HEAP_SIZE) ? _HEAP_SIZE : 0xA000;
+_STACK_SIZE = DEFINED(_STACK_SIZE) ? _STACK_SIZE : 0x400;
+_HEAP_SIZE = DEFINED(_HEAP_SIZE) ? _HEAP_SIZE : 0x400;
 
 @MEMORY_SECTION@
 
