lib: sw_apps: Use print_elf_size() macro for printing elf size
Update the template apps to use the print_elf_size() macro
for printing the elf size during post build.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/dhrystone/src/CMakeLists.txt
+++ b/lib/sw_apps/dhrystone/src/CMakeLists.txt
@@ -33,8 +33,4 @@ add_executable(${APP_NAME}.elf ${_sources})
 target_link_libraries(${APP_NAME}.elf -Wl,-T -Wl,\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group,-l${_deps} -Wl,--end-group)
 target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
 target_include_directories(${APP_NAME}.elf PUBLIC ${USER_INCLUDE_DIRECTORIES})
-if(DEFINED CMAKE_SIZE)
-add_custom_command(
-	TARGET ${APP_NAME}.elf POST_BUILD
-	COMMAND ${CMAKE_SIZE} --format=berkeley ${APP_NAME}.elf)
-endif()
+print_elf_size(CMAKE_SIZE ${APP_NAME})
