--- a/lib/sw_apps/zynq_fsbl/src/CMakeLists.txt
+++ b/lib/sw_apps/zynq_fsbl/src/CMakeLists.txt
@@ -60,8 +60,4 @@ target_link_libraries(${APP_NAME}.elf -Os -Wl,--gc-sections -n -T\"${CMAKE_SOURC
 
 target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
 target_include_directories(${APP_NAME}.elf PUBLIC ${USER_INCLUDE_DIRECTORIES})
-if(DEFINED CMAKE_SIZE)
-    add_custom_command(
-	TARGET ${APP_NAME}.elf POST_BUILD
-	COMMAND ${CMAKE_SIZE} --format=berkeley ${APP_NAME}.elf)
-endif()
+print_elf_size(CMAKE_SIZE ${APP_NAME})
