--- a/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
@@ -59,12 +59,8 @@ if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53")
     OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64"))
 target_link_libraries(${APP_NAME}.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript_a53.ld\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 else()
-target_link_libraries(${APP_NAME}.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_link_libraries(${APP_NAME}.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 endif()
 target_compile_definitions(${APP_NAME}.elf PUBLIC ${USER_COMPILE_DEFINITIONS})
 target_include_directories(${APP_NAME}.elf PUBLIC ${USER_INCLUDE_DIRECTORIES})
-if(DEFINED CMAKE_SIZE)
-    add_custom_command(
-	TARGET ${APP_NAME}.elf POST_BUILD
-	COMMAND ${CMAKE_SIZE} --format=berkeley ${APP_NAME}.elf)
-endif()
+print_elf_size(CMAKE_SIZE ${APP_NAME})
