--- a/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
@@ -51,13 +51,12 @@ if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa72")
 else()
     set(S_SOURCES xfsbl_exit.S xfsbl_translation_table_a53_32.S)
 endif()
-string(APPEND CMAKE_C_FLAGS ${USER_COMPILE_OPTIONS})
 string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINK_OPTIONS})
 add_executable(${APP_NAME}.elf ${S_SOURCES} ${_sources})
 
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53")
     OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64"))
-target_link_libraries(${APP_NAME}.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript_a53.ld\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_link_libraries(${APP_NAME}.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript_a53.ld\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 else()
 target_link_libraries(${APP_NAME}.elf -Os -flto -ffat-lto-objects -Wl,--gc-sections -n -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_LIBRARY_PATH}/\" -L\"${USER_LINK_DIRECTORIES}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 endif()
